# kokkos_H2D_incompatible_layouts_experiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
